# embedding_projector

./: .gitignore  .python-version  pyproject.toml  readme.md  requirements.txt  test.py  test_wandb.py
