[tool.poetry]
name = "embedding_projector"
version = "0.1.0"
description = ""
authors = ["Costa Huang <costa.huang@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
tensorflow = "^2.5.0"
tensorflow-datasets = "^4.3.0"
wandb = "^0.10.33"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
